[package]
name = "gherkin-to-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"

[[bin]]
name = "gherkin-to-markdown"
path = "src/bin/gherkin_to_markdown.rs"

[[bin]]
name = "gherkin-to-youtrack"
path = "src/bin/gherkin_to_youtrack.rs"